# LipkinModel

./: lipkin-model.ipynb  pyproject.toml
latex/: main.tex  preamble.sty
